--- a/app/src/main/res/layout/activity_pay_to_store.xml
+++ b/app/src/main/res/layout/activity_pay_to_store.xml
@@ -42,7 +42,7 @@
             android:id="@+id/at_pay_to_store_iv_pic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/logo"/>
         
         <LinearLayout
