--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background">
     <LinearLayout
         android:layout_width="match_parent"
@@ -83,14 +84,14 @@
         android:layout_marginRight="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_88"
         android:orientation="horizontal">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/ac_store_iv_img"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_60"
             android:layout_gravity="center"
-            android:src="@drawable/test"
-            android:scaleType="fitXY"
-            android:layout_marginLeft="@dimen/dp_10"/>
+            android:scaleType="centerCrop"
+            android:layout_marginLeft="@dimen/dp_10"
+            app:riv_corner_radius="@dimen/dp_5"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
