--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,31 +1,351 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_60"
-        android:background="@color/white"
-        android:id="@+id/top"/>
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/tas"
-        app:tabGravity="center"
-        app:tabIndicatorColor="@color/white"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/colorPrimaryDark"
-        app:tabTextColor="@color/colorPrimary"
-        />
-
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/vp"
-        android:layout_below="@+id/tas"
-        ></android.support.v4.view.ViewPager>
-
+    <LinearLayout
+        android:layout_width="@dimen/dp_320"
+        android:layout_height="@dimen/dp_500"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_203"
+            android:background="@drawable/mine_title_gb"
+            android:orientation="vertical">
+                <TextView
+                    android:id="@+id/title_theme_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="@dimen/sp_18"
+                    android:textColor="@android:color/white"
+                    android:text="个人资料" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_160"
+            android:layout_marginLeft="@dimen/dp_12"
+            android:layout_marginTop="-220dp"
+            android:layout_marginRight="@dimen/dp_12"
+            android:background="@drawable/userinfo"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_100"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="@dimen/dp_80"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:orientation="vertical">
+                    <com.zthx.npj.view.MyCircleView
+                        android:id="@+id/ac_userMsg_mcv_headImg"
+                        android:layout_width="@dimen/dp_60"
+                        android:layout_height="@dimen/dp_60"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/dp_13"
+                        android:src="@drawable/logo"/>
+                    <ImageView
+                        android:id="@+id/ac_userMsg_tv_level"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_23"
+                        android:gravity="center"
+                        android:text="金牌代言人"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_12"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/ac_userMsg_tv_beDYR"
+                            android:gravity="center"
+                            android:layout_width="@dimen/dp_100"
+                            android:layout_height="@dimen/dp_20"
+                            android:layout_marginTop="@dimen/dp_13"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="@dimen/dp_12"
+                            android:background="@drawable/theme_conner_15"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/sp_13"
+                            android:text="升级为代言人"/>
+                    </RelativeLayout>
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_nickName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dp_5"
+                        android:textSize="@dimen/sp_15"
+                        android:textColor="@color/text3"
+                        android:text="雪落下的声音"/>
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_signature"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dp_12"
+                        android:layout_marginTop="@dimen/dp_15"
+                        android:layout_marginLeft="@dimen/dp_5"
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@color/text6"
+                        android:text="诚信第一、互惠互利、共赢"/>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_marginTop="@dimen/dp_11"
+                    android:layout_marginLeft="@dimen/dp_27"
+                    android:src="@drawable/userinfo_location"/>
+                <TextView
+                    android:id="@+id/ac_userMsg_tv_address"
+                    android:layout_width="@dimen/dp_150"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:textSize="@dimen/sp_13"
+                    android:textColor="@color/text9"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:layout_marginTop="@dimen/dp_13"
+                    android:text="河南省郑州市金水区省汇中心"/>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/dp_13"
+                        android:textColor="@color/app_theme"
+                        android:textSize="@dimen/sp_13"
+                        android:layout_marginRight="@dimen/dp_13"
+                        android:text="1天前在线"/>
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_80"
+            android:background="@color/white"
+            android:layout_marginLeft="@dimen/dp_12"
+            android:layout_marginRight="@dimen/dp_12"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/ac_userMsg_tv_hits"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_15"
+                    android:text="523人"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text9"
+                    android:textSize="@dimen/sp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="访问次数"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/ac_userMsg_tv_attNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_15"
+                    android:text="1125人"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text9"
+                    android:textSize="@dimen/sp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="粉丝数"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/ac_userMsg_tv_historyMoney"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_15"
+                    android:text="1200元"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text9"
+                    android:textSize="@dimen/sp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="历史交易"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/ac_userMsg_tv_reputation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_15"
+                    android:text="259分"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text9"
+                    android:textSize="@dimen/sp_12"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="信誉分"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_70"
+            android:background="@color/app_theme"
+            android:layout_marginLeft="@dimen/dp_12"
+            android:layout_marginRight="@dimen/dp_12"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_16"
+                android:src="@drawable/auth"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_qyCert"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_12"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#F39B1F"
+                        android:text="企业保证"/>
+                    <TextView
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_12"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#C490BF"
+                        android:text="销量过万"/>
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_sjCert"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_12"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#EB6877"
+                        android:text="商家认证"/>
+                    <TextView
+                        android:id="@+id/ac_userMsg_iv_mdCert"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_12"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#F37C64"
+                        android:text="线下门店"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#4FA0F1"
+                        android:text="七天退换"/>
+                    <TextView
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#81AB64"
+                        android:text="信用最高"/>
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_smCert"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:background="#2FA22F"
+                        android:text="实名认证"/>
+                    <TextView
+                        android:id="@+id/ac_userMsg_tv_goCert"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginLeft="@dimen/dp_11"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:gravity="center"
+                        android:textSize="@dimen/sp_12"
+                        android:textColor="@color/white"
+                        android:text="去认证 》"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_80"
+            android:layout_gravity="center"
+            android:src="@drawable/logo"
+            android:layout_marginTop="@dimen/dp_20"/>
+    </LinearLayout>
 </LinearLayout>
