--- a/app/src/main/res/layout/item_ak_adapter.xml
+++ b/app/src/main/res/layout/item_ak_adapter.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_120"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_marginRight="@dimen/dp_12"
     android:layout_marginLeft="@dimen/dp_12">
@@ -11,12 +11,13 @@
         android:layout_width="@dimen/dp_100"
         android:layout_height="@dimen/dp_100"
         android:layout_gravity="center_vertical">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_ak_iv_img"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_100"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher"/>
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"
+            app:riv_corner_radius="@dimen/dp_5"/>
         <ImageView
             android:layout_width="@dimen/dp_35"
             android:layout_height="@dimen/dp_35"
