--- a/app/src/main/res/layout/item_cart_goods.xml
+++ b/app/src/main/res/layout/item_cart_goods.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="@dimen/dp_95"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_85">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_cartGoods_iv_goodsImg"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginLeft="@dimen/dp_12"
+            android:scaleType="centerCrop"
             android:background="@drawable/gray_conner"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            app:riv_corner_radius="@dimen/dp_5"/>
         <TextView
             android:id="@+id/item_cartGoods_tv_goodsName"
             android:layout_width="wrap_content"
