--- a/app/src/main/res/layout/item_classfiy_detail_goods.xml
+++ b/app/src/main/res/layout/item_classfiy_detail_goods.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dp_170"
     android:layout_height="@dimen/dp_243"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/dp_10"
     android:layout_marginTop="@dimen/dp_10"
@@ -11,11 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_180"
         android:background="@drawable/gray_conner">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_iv_classfiy_detail_goods"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"/>
+            android:scaleType="centerCrop"
+            app:riv_corner_radius_top_left="@dimen/dp_5"
+            app:riv_corner_radius_top_right="@dimen/dp_5"/>
 
         <LinearLayout
             android:id="@+id/item_classfiy_ll"
