--- a/app/src/main/res/layout/item_classfiy_home_category.xml
+++ b/app/src/main/res/layout/item_classfiy_home_category.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_100"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="@dimen/dp_8"
     android:layout_marginTop="@dimen/dp_5"
 
     android:orientation="vertical">
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/item_album"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"
+        app:riv_corner_radius="@dimen/dp_5"/>
     <TextView
         android:id="@+id/item_home_name"
         android:layout_width="50dp"
