--- a/app/src/main/res/layout/item_discover_need.xml
+++ b/app/src/main/res/layout/item_discover_need.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_114">
+    android:layout_height="@dimen/dp_114"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
         android:layout_width="match_parent"
@@ -13,19 +13,26 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
         android:background="@color/background"
-        android:layout_alignParentBottom="true"></View>
-    <ImageView
-        android:id="@+id/item_discover_need_pic"
-        android:layout_width="@dimen/dp_90"
-        android:layout_height="@dimen/dp_90"
+        android:layout_alignParentBottom="true"/>
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp_12"
-        android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"/>
+        android:background="@drawable/white_conner_5">
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/item_discover_need_pic"
+            android:layout_width="@dimen/dp_90"
+            android:layout_height="@dimen/dp_90"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"
+            app:riv_corner_radius="@dimen/dp_5"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@id/item_discover_need_pic"
+        android:layout_toRightOf="@id/ll"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_marginLeft="@dimen/dp_10">
