--- a/app/src/main/res/layout/item_home_goods.xml
+++ b/app/src/main/res/layout/item_home_goods.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dp_170"
     android:layout_height="@dimen/dp_257"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginBottom="@dimen/dp_10"
     android:layout_marginLeft="@dimen/dp_12"
     android:background="@drawable/white_conner_8">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/item_iv_home_goods"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_170"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/logo"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo"
+        app:riv_corner_radius_top_left="@dimen/dp_5"
+        app:riv_corner_radius_top_right="@dimen/dp_5"/>
 
     <TextView
         android:id="@+id/item_tv_home_goods_title"
@@ -65,23 +67,29 @@
             android:layout_marginRight="@dimen/dp_12">
             <TextView
                 android:id="@+id/item_tv_home_goods_mall_name"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_15"
+                android:gravity="center"
                 android:text="@string/go_to_game"
                 android:textSize="@dimen/sp_12"
                 android:textColor="@color/white"
                 android:layout_centerVertical="true"
                 android:layout_centerInParent="true"
-                android:layout_marginLeft="@dimen/dp_26"/>
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:layout_marginLeft="@dimen/dp_40"/>
         </RelativeLayout>
-        <com.zthx.npj.view.MyCircleView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_iv_home_goods_mall"
             android:layout_width="@dimen/dp_28"
             android:layout_height="@dimen/dp_28"
             android:layout_marginLeft="@dimen/dp_8"
             android:layout_marginTop="@dimen/dp_4"
             android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher"/>
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher"
+            app:riv_oval="true"
+            app:riv_border_color="@color/app_theme"
+            app:riv_border_width="@dimen/dp_1"/>
     </RelativeLayout>
 </LinearLayout>
