--- a/app/src/main/res/layout/item_my_collect_store.xml
+++ b/app/src/main/res/layout/item_my_collect_store.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_90">
+    android:layout_height="@dimen/dp_90"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/item_my_collect_store_pic"
         android:layout_width="@dimen/dp_70"
         android:layout_height="@dimen/dp_70"
         android:src="@mipmap/ic_launcher"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/dp_12"/>
+        android:layout_marginLeft="@dimen/dp_12"
+        app:riv_corner_radius="@dimen/dp_5"/>
 
     <TextView
         android:id="@+id/item_my_collect_store_name"
