--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginTop="@dimen/dp_10"
     android:background="@android:color/white">
@@ -40,14 +40,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_100">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_orderList_iv_goodsImg"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
-            android:scaleType="fitXY"
-            android:layout_marginLeft="@dimen/dp_12"/>
+            android:scaleType="centerCrop"
+            android:layout_marginLeft="@dimen/dp_12"
+            app:riv_corner_radius="@dimen/dp_5"/>
         <TextView
             android:id="@+id/item_orderList_tv_goodsName"
             android:layout_width="match_parent"
