--- a/app/src/main/res/layout/item_sec_kill_adpter.xml
+++ b/app/src/main/res/layout/item_sec_kill_adpter.xml
@@ -9,13 +9,14 @@
         android:layout_height="@dimen/dp_90"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp_12">
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_sec_kill_iv_goods_pic"
             android:layout_width="@dimen/dp_90"
             android:layout_height="@dimen/dp_90"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:layout_centerVertical="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo"
+            app:riv_corner_radius="@dimen/dp_5"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_sec_kill"
