--- a/app/src/main/res/layout/item_store_quotation.xml
+++ b/app/src/main/res/layout/item_store_quotation.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_95">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="@dimen/dp_75"
         android:layout_height="@dimen/dp_75"
         android:src="@mipmap/ic_launcher"
         android:layout_marginLeft="@dimen/dp_12"
         android:layout_centerVertical="true"
-        android:id="@+id/item_store_quotation_pic"/>
+        android:id="@+id/item_store_quotation_pic"
+        android:scaleType="centerCrop"
+        app:riv_corner_radius="@dimen/dp_5"/>
 
     <TextView
         android:layout_width="wrap_content"
