--- a/app/src/main/res/layout/item_supply_products.xml
+++ b/app/src/main/res/layout/item_supply_products.xml
@@ -8,5 +8,5 @@
         android:id="@+id/item_supplyProducts_iv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="centerCrop"/>
 </LinearLayout>
