--- a/app/src/main/res/layout/item_want_buy_list.xml
+++ b/app/src/main/res/layout/item_want_buy_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_145"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -10,13 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_95">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_want_buy_manager_list_pic"
             android:layout_width="@dimen/dp_75"
             android:layout_height="@dimen/dp_75"
             android:layout_centerVertical="true"
             android:src="@mipmap/ic_launcher"
-            android:layout_marginLeft="@dimen/dp_12"/>
+            android:layout_marginLeft="@dimen/dp_12"
+            android:scaleType="centerCrop"
+            app:riv_corner_radius="@dimen/dp_5"/>
 
         <TextView
             android:id="@+id/item_want_buy_manager_list_title"
