--- a/app/src/main/res/layout/jmui_chat_item_receive_text.xml
+++ b/app/src/main/res/layout/jmui_chat_item_receive_text.xml
@@ -71,7 +71,7 @@
                     android:layout_marginLeft="11dp"
                     android:layout_marginTop="13.33dp"
                     android:background="@drawable/logo"
-                    android:scaleType="fitXY"/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
