--- a/app/src/main/res/layout/popupwindow_share.xml
+++ b/app/src/main/res/layout/popupwindow_share.xml
@@ -12,7 +12,7 @@
             android:id="@+id/img_daysign"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"/>
+            android:scaleType="centerCrop"/>
         <RelativeLayout
             android:id="@+id/rela1"
             android:layout_width="wrap_content"
