--- a/app/src/main/res/layout/activity_income_log.xml
+++ b/app/src/main/res/layout/activity_income_log.xml
@@ -22,7 +22,7 @@
             android:textSize="@dimen/sp_15"
             android:text="全部交易类型"/>
     </LinearLayout>
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_60"
         android:background="@color/background"
@@ -55,7 +55,7 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:textColor="@color/text9"
             android:text="充值123.50元，提现2516.30元"/>
-    </LinearLayout>
+    </LinearLayout>-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ac_incomeLog_rv_mingxi"
         android:layout_width="match_parent"
