--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     android:orientation="vertical"
     tools:context=".ui.fragment.HomeFragment">
@@ -58,13 +59,16 @@
                                     android:textSize="@dimen/dp_10" />
                             </LinearLayout>
 
-                            <com.zthx.npj.view.MyCircleView
+                            <com.makeramen.roundedimageview.RoundedImageView
                                 android:id="@+id/fg_home_mcv_headImg"
                                 android:layout_width="@dimen/dp_23"
                                 android:layout_height="@dimen/dp_23"
                                 android:layout_marginLeft="@dimen/dp_12"
                                 android:layout_marginTop="@dimen/dp_10"
-                                android:src="@drawable/logo" />
+                                android:src="@drawable/logo"
+                                app:riv_oval="true"
+                                app:riv_border_width="@dimen/dp_1"
+                                app:riv_border_color="@color/white"/>
                         </com.youth.banner.Banner>
                     </RelativeLayout>
                     <LinearLayout
