--- a/app/src/main/res/layout/item_location_store.xml
+++ b/app/src/main/res/layout/item_location_store.xml
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_5"
-            android:text="新会员减免60元现"
+            android:text="新会员减免60元现金"
             android:textColor="@color/text6"
             android:textSize="@dimen/sp_12"/>
     </LinearLayout>
