--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -14,63 +14,74 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_below="@id/title_theme">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_height="@dimen/dp_0"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <View
+                    android:layout_width="@dimen/dp_2"
+                    android:layout_height="@dimen/dp_15"
+                    android:background="@color/app_theme"
+                    android:layout_marginLeft="@dimen/dp_12"></View>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="常见问题"
+                    android:textSize="@dimen/sp_16"
+                    android:textColor="@color/app_theme"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+            </LinearLayout>
             <View
-                android:layout_width="@dimen/dp_2"
-                android:layout_height="@dimen/dp_15"
-                android:background="@color/app_theme"
-                android:layout_marginLeft="@dimen/dp_12"></View>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="常见问题"
-                android:textSize="@dimen/sp_16"
-                android:textColor="@color/app_theme"
-                android:layout_marginLeft="@dimen/dp_10"/>
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/background"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ac_help_rv_problem1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/background"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"/>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_help_rv_problem1"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_170"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_height="@dimen/dp_0"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <View
+                    android:layout_width="@dimen/dp_2"
+                    android:layout_height="@dimen/dp_15"
+                    android:background="@color/app_theme"
+                    android:layout_marginLeft="@dimen/dp_12"></View>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="热门问题"
+                    android:textSize="@dimen/sp_16"
+                    android:textColor="@color/app_theme"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+            </LinearLayout>
             <View
-                android:layout_width="@dimen/dp_2"
-                android:layout_height="@dimen/dp_15"
-                android:background="@color/app_theme"
-                android:layout_marginLeft="@dimen/dp_12"></View>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="热门问题"
-                android:textSize="@dimen/sp_16"
-                android:textColor="@color/app_theme"
-                android:layout_marginLeft="@dimen/dp_10"/>
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/background"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ac_help_rv_problem2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="@color/background"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"/>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_help_rv_problem2"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_170"/>
     </LinearLayout>
 
     <LinearLayout
