--- a/app/src/main/res/layout/activity_membership_package.xml
+++ b/app/src/main/res/layout/activity_membership_package.xml
@@ -1,97 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <include
+        layout="@layout/title"/>
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include
-            layout="@layout/title"></include>
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_270"
-            android:background="@drawable/gift1"
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants"
             android:orientation="vertical">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_91">
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:layout_width="@dimen/dp_70"
-                android:layout_height="@dimen/dp_70"
-                android:src="@mipmap/ic_launcher"
-                android:layout_marginTop="@dimen/dp_15"
-                android:layout_marginLeft="@dimen/dp_12"
-                android:id="@+id/at_membership_package_head_pic"
-                app:riv_oval="true"
-                app:riv_border_color="@color/white"
-                app:riv_border_width="@dimen/dp_2"/>
-            <TextView
-                android:id="@+id/at_membership_package_tv_name"
-                android:layout_width="@dimen/dp_80"
-                android:layout_height="@dimen/dp_23"
-                android:text="闭眼看世界"
-                android:textSize="@dimen/sp_13"
-                android:gravity="center"
-                android:singleLine="true"
-                android:ellipsize="marquee"
-                android:textColor="@android:color/white"
-                android:layout_toRightOf="@id/at_membership_package_head_pic"
-                android:layout_marginTop="@dimen/dp_25"
-                android:layout_marginLeft="@dimen/dp_11"/>
-            <ImageView
-                android:id="@+id/ac_membership_iv_level"
-                android:layout_width="@dimen/dp_80"
-                android:layout_height="@dimen/dp_23"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_12"
-                android:layout_marginTop="@dimen/dp_5"
-                android:layout_marginLeft="@dimen/dp_9"
-                android:layout_toRightOf="@id/at_membership_package_head_pic"
-                android:src="@drawable/level0"
-                android:layout_below="@id/at_membership_package_tv_name"/>
+                android:layout_height="@dimen/dp_270"
+                android:background="@drawable/gift1"
+                android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_91">
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:layout_width="@dimen/dp_70"
+                        android:layout_height="@dimen/dp_70"
+                        android:src="@mipmap/ic_launcher"
+                        android:layout_marginTop="@dimen/dp_15"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:id="@+id/at_membership_package_head_pic"
+                        app:riv_oval="true"
+                        app:riv_border_color="@color/white"
+                        app:riv_border_width="@dimen/dp_2"/>
+                    <TextView
+                        android:id="@+id/at_membership_package_tv_name"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_23"
+                        android:text="闭眼看世界"
+                        android:textSize="@dimen/sp_13"
+                        android:gravity="center"
+                        android:singleLine="true"
+                        android:ellipsize="marquee"
+                        android:textColor="@android:color/white"
+                        android:layout_toRightOf="@id/at_membership_package_head_pic"
+                        android:layout_marginTop="@dimen/dp_25"
+                        android:layout_marginLeft="@dimen/dp_11"/>
+                    <ImageView
+                        android:id="@+id/ac_membership_iv_level"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_23"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_12"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:layout_marginLeft="@dimen/dp_9"
+                        android:layout_toRightOf="@id/at_membership_package_head_pic"
+                        android:src="@drawable/level0"
+                        android:layout_below="@id/at_membership_package_tv_name"/>
 
-            <TextView
-                android:id="@+id/at_membership_package_tv_tuijian"
-                android:layout_width="@dimen/dp_80"
-                android:layout_height="@dimen/dp_20"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="@dimen/dp_13"
-                android:background="@drawable/half_left_conner_10"
-                android:text="联系推荐人"
-                android:textSize="@dimen/sp_13"
-                android:textColor="@android:color/white"
-                android:gravity="center"/>
+                    <TextView
+                        android:id="@+id/at_membership_package_tv_tuijian"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_20"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/dp_13"
+                        android:background="@drawable/half_left_conner_10"
+                        android:text="联系推荐人"
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"/>
 
-            <TextView
-                android:id="@+id/at_membership_package_tv_share"
-                android:layout_width="@dimen/dp_80"
-                android:layout_height="@dimen/dp_20"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/half_left_conner_10"
-                android:layout_below="@id/at_membership_package_tv_tuijian"
-                android:layout_marginTop="@dimen/dp_9"
-                android:text="分享"
-                android:textSize="@dimen/sp_13"
-                android:textColor="@android:color/white"
-                android:gravity="center"/>
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/at_membership_package_tv_share"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_20"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/half_left_conner_10"
+                        android:layout_below="@id/at_membership_package_tv_tuijian"
+                        android:layout_marginTop="@dimen/dp_9"
+                        android:text="分享"
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"/>
+                </RelativeLayout>
+            </LinearLayout>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/at_membership_package_tb"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_50"
+                android:background="@android:color/white"
+                app:tabGravity="center"
+                app:tabIndicatorColor="@color/app_theme"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/app_theme"
+                app:tabTextColor="@color/text3"></android.support.design.widget.TabLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/at_membership_package_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </android.support.v4.view.ViewPager>
         </LinearLayout>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/at_membership_package_tb"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:background="@android:color/white"
-            app:tabGravity="center"
-            app:tabIndicatorColor="@color/app_theme"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/app_theme"
-            app:tabTextColor="@color/text3"></android.support.design.widget.TabLayout>
-        <android.support.v4.view.ViewPager
-            android:id="@+id/at_membership_package_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v4.view.ViewPager>
-    </LinearLayout>
-</RelativeLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+</LinearLayout>
