--- a/app/src/main/res/layout/item_comment_video.xml
+++ b/app/src/main/res/layout/item_comment_video.xml
@@ -29,7 +29,7 @@
             android:textSize="@dimen/sp_15"
             android:textColor="@color/text6" />
 
-        <TextView
+        <!--<ImageView
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_23"
             android:background="@drawable/bg_daiyanren"
@@ -37,22 +37,20 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/sp_12"
             android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_12"/>
-
-        <TextView
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_17"
-            android:text="已认证"
-            android:textSize="@dimen/sp_12"
-            android:textColor="#9595ce"
-            android:gravity="center"
-            android:background="@drawable/stroke_zise_5"
-            android:layout_marginLeft="@dimen/dp_8"/>
+            android:layout_marginLeft="@dimen/dp_12"/>-->
         <ImageView
+            android:id="@+id/item_commenVideo_iv_level"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_23"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_12"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/dp_12"/>
+        <!--<ImageView
             android:layout_width="@dimen/dp_15"
             android:layout_height="@dimen/dp_15"
             android:src="@drawable/man"
-            android:layout_marginLeft="@dimen/dp_5"/>
+            android:layout_marginLeft="@dimen/dp_5"/>-->
     </LinearLayout>
 
     <TextView
