--- a/app/src/main/res/layout/item_dicover_service_knowledge.xml
+++ b/app/src/main/res/layout/item_dicover_service_knowledge.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dp_78"
     android:layout_height="@dimen/dp_78"
     android:gravity="center_horizontal"
+    android:layout_marginLeft="@dimen/dp_10"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/item_iv_agriculture_knowledge"
