--- a/app/src/main/res/layout/item_pre_sell.xml
+++ b/app/src/main/res/layout/item_pre_sell.xml
@@ -119,10 +119,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="￥199"
+        android:textStyle="bold"
         android:textColor="@color/app_theme"
         android:layout_below="@id/item_pre_sell_tv_title"
         android:layout_alignLeft="@id/item_pre_sell_tv_title"
-        android:textSize="@dimen/sp_13"/>
+        android:textSize="@dimen/sp_15"/>
 
     <Button
         android:layout_width="@dimen/dp_75"
