--- a/app/src/main/res/layout/activity_kuaidi.xml
+++ b/app/src/main/res/layout/activity_kuaidi.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,17 +13,20 @@
         android:background="@drawable/white_conner_8">
         <ImageView
             android:id="@+id/ac_kuaidi_iv_back"
-            android:layout_width="@dimen/dp_15"
-            android:layout_height="@dimen/dp_15"
+            android:layout_width="@dimen/dp_28"
+            android:layout_height="@dimen/dp_28"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/dp_20"
             android:src="@drawable/back"/>
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/ac_kuaidi_iv_goodsImg"
             android:layout_width="@dimen/dp_30"
             android:layout_height="@dimen/dp_30"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/dp_10"
+            app:riv_corner_radius="@dimen/dp_5"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:src="@drawable/add_pic"/>
         <TextView
             android:id="@+id/ac_kuaidi_tv_goodsState"
@@ -37,6 +41,34 @@
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginLeft="@dimen/dp_40"
             android:background="@color/background"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/dp_30"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
+                android:src="@drawable/home_theme_message"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_10"
+                android:text="物流客服"/>
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_40"
+                android:src="@drawable/item_goods_more"/>
+        </RelativeLayout>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
