--- a/app/src/main/res/layout/activity_services_chat.xml
+++ b/app/src/main/res/layout/activity_services_chat.xml
@@ -4,8 +4,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.AddAddressActivity">
-    <include layout="@layout/title_theme"
-        android:id="@+id/ac_serviceChat_include"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_51"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:id="@+id/title">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50">
+            <ImageView
+                android:id="@+id/title_back"
+                android:layout_width="@dimen/dp_32"
+                android:layout_height="@dimen/dp_32"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp_6"
+                android:src="@drawable/back"/>
+
+            <TextView
+                android:id="@+id/ac_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textSize="@dimen/sp_18"
+                android:textColor="@color/text3"/>
+
+            <TextView
+                android:id="@+id/at_location_store_tv_ruzhu1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_50"
+                android:textSize="@dimen/sp_13"
+                android:visibility="gone"
+                android:textColor="@color/app_theme"/>
+            <TextView
+                android:id="@+id/at_location_store_tv_ruzhu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_12"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/app_theme"/>
+            <ImageView
+                android:id="@+id/ac_title_iv"
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_12"/>
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/background"/>
+    </LinearLayout>
     <!--<android.support.v7.widget.RecyclerView
         android:id="@+id/ac_serviceChat_rv"
         android:layout_width="match_parent"
@@ -18,12 +73,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_below="@id/ac_serviceChat_include"
-        android:layout_above="@id/ac_serviceChat_ll"/>
+        android:layout_marginBottom="@dimen/dp_50"
+        android:layout_below="@id/title"/>
     <RelativeLayout
         android:id="@+id/ac_serviceChat_ll"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
+        android:layout_height="wrap_content"
         android:background="@color/background"
         android:layout_alignParentBottom="true">
         <LinearLayout
@@ -76,15 +131,16 @@
         <View
             android:id="@+id/line"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_10"
+            android:layout_height="@dimen/dp_1"
             android:background="@color/background"
             android:layout_marginTop="@dimen/dp_12"
             android:layout_below="@id/ac_serviceChat_iv_expression"/>
         <LinearLayout
             android:id="@+id/ac_serviceChat_ll_add"
             android:layout_below="@id/line"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_80"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -159,4 +215,5 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
+
 </RelativeLayout>
