--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="black">#000000</color>
 
     <color name="background"> #EFEFEF </color>
+    <color name="background1"> #F2F2F2 </color>
     <color name="app_theme">  #2ABBAA  </color>
     <color name="background_img">#3BCCBB</color>
     <color name="goods_text_color">#333333</color>
